--- a/my-project/src/Components/Shop/shop.css
+++ b/my-project/src/Components/Shop/shop.css
@@ -15,7 +15,7 @@ html{
 }
 a>p{
     font-size: 12px;
-    position: fixed;
+    position: absolute;
     margin-top: -0.6cm;
     margin-left: 2.25cm;
     font-weight: normal;
@@ -29,19 +29,21 @@ a>p{
 }
 .search{
     display: inline-block;
-    position: fixed;
-   margin-top: -0.22cm;
+    position: absolute;
+   margin-top: 0.4cm;
    margin-left: 0.2cm;
+
     
 }
 input{
     width: 20cm;
-    height: 1.6cm;
+    height: 1cm;
     background-color: blanchedalmond;
     border: none;
     font-size: 15px;
     font-family: 'Open Sans', sans-serif;
     padding-left: 0.5cm;
+    border-radius: 5px;
 }
 .option{
     position: absolute;
@@ -50,22 +52,17 @@ input{
    
     
 }
-select{
-    width: 20cm;
-    height: 0.7cm;
-    border: none;
-    font-family: 'Open Sans', sans-serif;
-    padding-left: 0.5cm;
-}
-.ads{
+
+.category{
     width: 8cm;
     height: 8cm;
     background-color: rgb(255,173,141);
+    border-radius: 15px;
 }
 .news{
     width: 8cm;
     height: 9.52cm;
-    background-color: rgb(246,155,135);
+  
     
 }
 
