--- a/my-project/src/Components/Shop/shop.css
+++ b/my-project/src/Components/Shop/shop.css
@@ -2,7 +2,98 @@ html {
   background-color: rgb(255, 160, 122);
 }
 
-.llogo {
+.container {
+  margin: 1.25rem auto;
+  width: 95%;
+  display: flex;
+  flex-direction: column;
+}
+
+.container > .header {
+  display: flex;
+}
+
+.container > .header > .logo {
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-self: center;
+  width: 14rem;
+}
+
+.container > .header > .logo > h1 {
+  margin: 0;
+  font-weight: bold;
+  font-size: 20px;
+  text-align: center;
+}
+
+.container > .header > .logo > p {
+  margin: 0;
+  font-size: 12px;
+  font-weight: normal;
+  text-align: center;
+}
+
+.container > .header > div > .search {
+  flex: 1;
+}
+
+.container > .header > div > .search > input {
+  width: 100%;
+  height: 100%;
+  background-color: blanchedalmond;
+  border: none;
+  font-size: 15px;
+  font-family: "Open Sans", sans-serif;
+  border-radius: 5px;
+  padding: 0 0.5rem;
+}
+
+.container > .header > div > .button-container {
+  width: 35%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.container > .header > div > .button-container > a > img,
+.container > .header > div > .button-container > div > a > img {
+  width: 2rem;
+}
+
+.container > .header > div > .button-container > a > img[name="cart"] {
+  width: 3rem;
+}
+
+.container > .content {
+  display: flex;
+  margin-top: 1rem;
+}
+
+.container > .content > .categories {
+  width: 14rem;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(255, 173, 141);
+  border-radius: 15px;
+  padding: 1.5rem 0;
+}
+.container > .content > .categories > .cat-list {
+  display: flex;
+  flex-direction: column;
+  margin-top: 0.5rem;
+}
+
+.container > .content > .categories > h2,
+.container > .content > .categories > .cat-list > a {
+  margin: 0;
+  padding: 0.25rem 1rem;
+  text-decoration: none;
+}
+
+/* .llogo {
   width: 8cm;
   height: 1cm;
   text-align: center;
@@ -95,4 +186,4 @@ img[name="user"] {
   margin-top: -19cm;
   width: 1cm;
   height: 1cm;
-}
+} */
